refine templateNode, parser and remove json-schem